--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h1 {
 h2 {
   font-size: 20px;
   text-align: center;
-  color: yellow;
+  color: greenyellow;
   font-family: 'circularBold';
 }
 
